# project-euler-cpp

./: CMakeLists.txt  README.md
include/euler/: util.hpp
tests/: CMakeLists.txt  UtilsTests.cpp
